kubernetes/apps/frontend-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-server
  namespace: frontend-server
spec:
  selector:
    app: frontend-server
  ports:
    - port: 80
      targetPort: 80
