kubernetes/apps/frontend-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-server
  namespace: fronfrontend-servertend
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: home.icantkube.help
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-server
                port:
                  number: 80
